# trybuild

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
example-proc-macro/: Cargo.toml
example-proc-macro/src/: lib.rs
examples/: println.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: normalize.rs
src/: banner.rs  cargo.rs  dependencies.rs  diff.rs  directory.rs  env.rs  error.rs  expand.rs  features.rs  flock.rs  fs.rs  inherit.rs  lib.rs  manifest.rs  message.rs  normalize.rs  path.rs  prng.rs  run.rs  rustflags.rs  term.rs  tests.rs  toml.rs
src/tests/: and-others-verbose.rs  cargo-registry-custom.rs  cargo-registry-sparse.rs  cargo-registry.rs  consteval.rs  erased-serde-trait-bound.rs  ghost-note-help.rs  multiline-note.rs  right-aligned-line-number.rs  rust-lib-with-githash.rs  rust-lib.rs  traits-must-be-implemented.rs
tests/: stdout.rs  test.rs
tests/stdout/: print-fail.rs  print-pass.rs  run-fail.rs
tests/stdout/derive_mac/: Cargo.toml
tests/stdout/derive_mac/src/: lib.rs
tests/ui/: compile-fail-1.suffixed.stderr  compile-fail-2.stderr  compile-fail-3.stderr  compile-fail-const-assert.rs  compile-fail-const-assert.stderr  inline_compile_fail.stderr  normalize_and_x_others.rs  normalize_and_x_others.stderr  pass-test-1.rs  pass-test-2.rs  print-stderr-no-stderr-file.rs  read-file.rs  run-feature-fail.rs
trybuild-test-suite/: Cargo.toml
trybuild-test-suite/src/: lib.rs
trybuild-test-suite/tests/: test.rs
trybuild-test-suite/tests/ui/: compile-pass-stdout.rs
