[package]
name = "trybuild2"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2018"
rust-version = "1.36"
license = "MIT OR Apache-2.0"
description = "Test harness for ui tests of compiler diagnostics (with support for inline tests)"
repository = "https://github.com/GuillaumeGomez/trybuild2"
documentation = "https://docs.rs/trybuild2"
exclude = ["screenshots/*"]
readme = "README.md"

[features]
# Experimental: highlight the diff between the expected and actual compiler
# output. Currently unix-only. If you test this out, please provide any feedback
# in https://github.com/dtolnay/trybuild/issues/41.
diff = ["dissimilar"]

[dependencies]
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
once_cell = "1.9"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.0.4"
toml = "0.5.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
