[package]
name = "trybuild"
version = "1.0.63"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Test harness for ui tests of compiler diagnostics"
documentation = "https://docs.rs/trybuild"
edition = "2018"
exclude = ["screenshots/*"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/trybuild"
rust-version = "1.36"

[features]
# Experimental: highlight the diff between the expected and actual compiler
# output. Currently unix-only. If you test this out, please provide any feedback
# in https://github.com/dtolnay/trybuild/issues/41.
diff = ["dissimilar"]

[dependencies]
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
once_cell = "1.9"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0"
termcolor = "1.0.4"
toml = "0.5.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
