[package]
name = "trybuild2"
version = "1.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Test harness for ui tests of compiler diagnostics (with support for inline tests)"
repository = "https://github.com/GuillaumeGomez/trybuild2"
documentation = "https://docs.rs/trybuild2"
categories = ["development-tools::testing"]
exclude = ["screenshots/*"]
keywords = ["macros", "testing", "dev-dependencies"]

[features]
# Experimental: highlight the diff between the expected and actual compiler
# output. Currently unix-only. If you test this out, please provide any feedback
# in https://github.com/dtolnay/trybuild/issues/41.
diff = ["dissimilar"]

[dependencies]
basic-toml = "0.1"
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
once_cell = "1.9"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.99"
termcolor = "1.0.4"

[dev-dependencies]
automod = "1.0.10"
# Used in documentation code example.
rustversion = "1.0.14"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
