[package]
name = "trybuild-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = "1.0.139"
serde_derive = "1.0.139"

[[bin]]
name = "normalize"
path = "fuzz_targets/normalize.rs"
test = false
doc = false

[workspace]
